# Forward-Opt

./: .gitignore  CMakeLists.txt  README.md  build_forwardopt.sh  env.sh
bash_tools/: build_forwardopt.sh  build_llvm.sh  gitpush.sh
bindings/: CMakeLists.txt
bindings/kld/: CMakeLists.txt
bindings/pymlir/: CMakeLists.txt  pymlir.cpp
include/FORWARD/: CMakeLists.txt  InitAll.h
include/FORWARD/Dialect/: CMakeLists.txt
include/FORWARD/Dialect/FORWARD/: CMakeLists.txt
include/FORWARD/Dialect/FORWARD/IR/: CMakeLists.txt  FORWARD.h  FORWARDBase.td  FORWARDOps.td
include/FORWARD/Dialect/FORWARD/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/FORWARD/Dialect/FORWARD/tosa_ext/: tosa_ext.h
include/FORWARD/Interfaces/: CMakeLists.txt  InferenceInterface.h  InferenceInterface.td
include/FORWARD/Interfaces/otherInterfaces/: FlopsInterface.h  GlobalGenInterface.h  LocalGenInterface.h  LocalGenInterface.td  ShapeInterface.h  TypeInterface.h
include/FORWARD/Misc/: CMakeLists.txt  Passes.h  Passes.td
include/FORWARD/Support/: AttrStruct.h  Float16.h  MathUtils.h  Module.h  Module.td  ModuleInterpreter.h  TensorFile.h
include/FORWARD/Support/CaliMath/: CaliMath.h
include/FORWARD/Support/Dnnl/: Conv.h  Dnnl.h  DnnlUtils.h  MatMul.h
include/FORWARD/Support/tosa_ext/: tosa_const.h  tosa_ext.h
lib/: CMakeLists.txt  InitAll.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/FDRA/Transforms/: PassDetail.h  Utility.cpp
lib/Dialect/FORWARD/IR/: CMakeLists.txt  FORWARDDialect.cpp  FORWARDOps.cpp
lib/Dialect/FORWARD/Transforms/: CMakeLists.txt  ImportCalibration.cpp  MatmulToFunc.cpp  PassDetail.h  TransformToQuantized.cpp
lib/Dialect/FORWARD/tosa_ext/: CMakeLists.txt  calibration_table.txt  tosa_add.cpp  tosa_conv2d.cpp  tosa_matmul.cpp  tosa_mul.cpp.bak  tosa_transpose.cpp
lib/Interfaces/: CMakeLists.txt  InferenceInterface.cpp
lib/Misc/: CMakeLists.txt  MiscPasses.cpp
lib/Support/: CMakeLists.txt  Float16.cpp  MathUtils.cpp  Module.cpp  ModuleInterpreter.cpp
lib/Support/CaliMath/: calibration_math.cpp
lib/Support/Dnnl/: Conv.cpp  Dnnl.cpp  DnnlUtils.cpp  MatMul.cpp  calibration_table.txt
lib/Support/tosa_ext/: tosa_const.cpp  tosa_transpose.cpp
models/VIT/: vit.py
models/VIT_executed/: MatmulAccelVIT.c  VIT_simplified.mlir  VIT_simplified_dbug.mlir  firstarg.txt  input_pixels_2d.txt  scripts  secondarg.txt  vit.py
models/VIT_executed/onWin11/: Win_scripts
models/dataset/: writer_img_npz.py
models/simple/: TORCH.mlir  scripts.sh  torchscript_linear.py  tosa_opt.mlir
models/simple_executed/: cali_table.txt  linalg_tensor.mlir  torchscript_linear.py  tosa.mlir  tosa_elided.mlir  vit_simplified.mlir  vit_simplified_dbug.mlir
python/: CMakeLists.txt  generateMatmulAccel.py  run_calibration.py  seperate_weights.py  trans.py
python/calibration/: kld_calibrator.py
python/transform/: MLIRImporter.py
python/utils/: mlir_parser.py  mlir_parser.py.bck  preprocess.py
tools/: CMakeLists.txt
tools/forward-opt/: CMakeLists.txt  forward-opt.cpp
tools/test-opt/: CMakeLists.txt  test-opt.cpp
